--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
     margin-bottom: 2rem;
     margin-top: 0.5rem;
 
+
 }
 .app-brand{
     font-size: 2rem;
@@ -10,4 +11,15 @@
     padding-top: 1rem;
     padding-left: 2rem;
     padding-bottom: 1rem;
+}
+.app-username{
+    font-size: 1.5rem;
+    color: white;
+    padding-left: 0.5rem;
+
+
+}
+.header-content{
+    display: flex;
+    flex-direction: row;
 }
